--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Color Game</title>
+	<script src="https://kit.fontawesome.com/d814455781.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
@@ -17,6 +18,8 @@
 		<span id="message"></span>
 		<button class="mode">Easy</button>
 		<button class="mode selected">Hard</button>
+		<span id="scoreCounter">Score: <span id="scoreNum">0</span>/<span id="totalNum">0</span></span>
+		
 	</div>
 	<div id="container">
 		<div class="square"></div>
